--- a/Ex02/Ex02.csproj
+++ b/Ex02/Ex02.csproj
@@ -8,4 +8,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1774.30" />
+    <PackageReference Include="MimeKit" Version="4.0.0" />
+  </ItemGroup>
+
 </Project>
