--- a/Ex02/Ex02.csproj
+++ b/Ex02/Ex02.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.0.0" />
+    <PackageReference Include="Markdig" Version="0.31.0" />
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1774.30" />
     <PackageReference Include="MimeKit" Version="4.0.0" />
   </ItemGroup>
